--- a/app/src/main/res/layout/activity_editor.xml
+++ b/app/src/main/res/layout/activity_editor.xml
@@ -2,7 +2,10 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:orientation="vertical">
+    xmlns:tools="http://schemas.android.com/tools"
+    android:orientation="vertical"
+    android:padding="@dimen/activity_margin"
+    tools:context=".EditorActivity">
 
     <LinearLayout
         android:layout_width="match_parent"
@@ -84,6 +87,7 @@
 
 
         <EditText
+            android:padding="@dimen/activity_margin"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:id="@+id/edit_supplier"
