--- a/app/src/main/res/menu/menu_main.xml
+++ b/app/src/main/res/menu/menu_main.xml
@@ -1,16 +1,16 @@
 <menu xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
-    tools:context="harvey.ggc.edu.sophieinventoryapppartone.MainActivity">
+    tools:context=".MainActivity">
 
     <item
         android:id="@+id/action_insert_d_data"
         android:title="@string/action_insert_dummy_data"
-        app:showAsAction="never"/>
+        app:showAsAction="never" />
 
     <item
         android:id="@+id/action_delete_entries"
         android:title="@string/action_delete_all_entries"
-        app:showAsAction="never"/>
+        app:showAsAction="never" />
 
 </menu>
