--- a/app/src/main/res/layout/activity_editor.xml
+++ b/app/src/main/res/layout/activity_editor.xml
@@ -1,8 +1,8 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    xmlns:tools="http://schemas.android.com/tools"
     android:orientation="vertical"
     android:padding="@dimen/activity_margin"
     tools:context=".EditorActivity">
@@ -11,48 +11,48 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:orientation="horizontal">
-        
+
         <TextView
-            android:text="@string/category_overview"
-            style="@style/Theme.AppCompat.DayNight.Dialog"/>
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="@string/category_overview" />
 
         <LinearLayout
             android:layout_width="0dp"
             android:layout_height="wrap_content"
             android:layout_weight="2"
-            android:paddingLeft="4dp"
-            android:orientation="vertical">
+            android:orientation="vertical"
+            android:paddingLeft="4dp">
 
             <EditText
+                android:id="@+id/edit_product_name"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:id="@+id/edit_product_name"
                 android:hint="@string/hint_product_name"
                 android:inputType="text"
-                />
+                android:padding="@dimen/activity_margin" />
 
             <EditText
+                android:id="@+id/edit_product_price"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:id="@+id/edit_product_price"
                 android:hint="@string/hint_product_price"
-                android:inputType="number"/>
+                android:inputType="number" />
 
         </LinearLayout>
 
-        </LinearLayout>
+    </LinearLayout>
 
     <LinearLayout
         android:id="@+id/container_quantity"
-        android:layout_height="wrap_content"
         android:layout_width="match_parent"
+        android:layout_height="wrap_content"
         android:orientation="horizontal">
 
         <TextView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="@string/category_quantity"
-            />
+            android:text="@string/category_quantity" />
 
         <LinearLayout
             android:layout_width="0dp"
@@ -61,59 +61,56 @@
             android:orientation="vertical">
 
             <Spinner
+                android:id="@+id/spinner_quantity"
                 android:layout_width="wrap_content"
                 android:layout_height="48dp"
-                android:id="@+id/spinner_quantity"
                 android:paddingRight="16dp"
-                android:spinnerMode="dropdown"/>
+                android:spinnerMode="dropdown" />
 
         </LinearLayout>
 
 
-        </LinearLayout>
+    </LinearLayout>
 
     <LinearLayout
+        android:id="@+id/container_supplier"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:id="@+id/container_supplier"
-        android:orientation="horizontal"
-        >
+        android:orientation="horizontal">
 
         <TextView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="@string/category_supplier"
-            />
+            android:text="@string/category_supplier" />
 
 
         <EditText
-            android:padding="@dimen/activity_margin"
+            android:id="@+id/edit_supplier"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:id="@+id/edit_supplier"
             android:inputType="text"
-            />
+            android:padding="@dimen/activity_margin" />
 
         <RelativeLayout
-            android:layout_weight="2"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
+            android:layout_weight="2"
             android:paddingLeft="4dp">
 
             <EditText
+                android:id="@+id/edit_phone"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:id="@+id/edit_phone"
                 android:hint="@string/hint_phone"
-                android:inputType="text"/>
+                android:inputType="text" />
 
             <TextView
+                android:id="@+id/label_phone_number"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:id="@+id/label_phone_number"
-                android:text="@string/dial"/>
+                android:text="@string/dial" />
 
         </RelativeLayout>
     </LinearLayout>
 
-    </LinearLayout>
+</LinearLayout>
