--- a/app/src/main/res/layout/activity_editor.xml
+++ b/app/src/main/res/layout/activity_editor.xml
@@ -60,6 +60,20 @@
             android:layout_weight="2"
             android:orientation="vertical">
 
+            <Button
+                android:id="@+id/quantity_pos_button"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:focusable="false"
+                android:text="+"/>
+
+            <Button
+                android:id="@+id/quantity_neg_button"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="-"
+                android:focusable="false"/>
+
             <Spinner
                 android:id="@+id/spinner_quantity"
                 android:layout_width="wrap_content"
@@ -102,13 +116,20 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:hint="@string/hint_phone"
-                android:inputType="text" />
+                android:inputType="text"
+                android:paddingBottom="@dimen/fab_margin"/>
 
             <TextView
                 android:id="@+id/label_phone_number"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:text="@string/dial" />
+
+            <Button
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:focusable="false"
+                android:text="Order"/>
 
         </RelativeLayout>
     </LinearLayout>
