--- a/app/src/main/res/layout/activity_editor.xml
+++ b/app/src/main/res/layout/activity_editor.xml
@@ -60,6 +60,11 @@
             android:layout_weight="2"
             android:orientation="vertical">
 
+            <EditText
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:id="@+id/edit_quantity"/>
+
             <Button
                 android:id="@+id/quantity_pos_button"
                 android:layout_width="wrap_content"
@@ -74,12 +79,6 @@
                 android:text="-"
                 android:focusable="false"/>
 
-            <Spinner
-                android:id="@+id/spinner_quantity"
-                android:layout_width="wrap_content"
-                android:layout_height="48dp"
-                android:paddingRight="16dp"
-                android:spinnerMode="dropdown" />
 
         </LinearLayout>
 
@@ -117,19 +116,21 @@
                 android:layout_height="wrap_content"
                 android:hint="@string/hint_phone"
                 android:inputType="text"
-                android:paddingBottom="@dimen/fab_margin"/>
+                android:paddingBottom="@dimen/fab_margin" />
 
             <TextView
                 android:id="@+id/label_phone_number"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
+                android:paddingBottom="@dimen/fab_margin"
                 android:text="@string/dial" />
 
             <Button
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
+               android:layout_alignParentBottom="true"
                 android:focusable="false"
-                android:text="Order"/>
+                android:text="Order" />
 
         </RelativeLayout>
     </LinearLayout>
