--- a/app/src/main/res/layout/activity_editor.xml
+++ b/app/src/main/res/layout/activity_editor.xml
@@ -89,7 +89,7 @@
         android:id="@+id/container_supplier"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:orientation="horizontal">
+        android:orientation="vertical">
 
         <TextView
             android:layout_width="wrap_content"
@@ -104,11 +104,7 @@
             android:inputType="text"
             android:padding="@dimen/activity_margin" />
 
-        <RelativeLayout
-            android:layout_width="0dp"
-            android:layout_height="wrap_content"
-            android:layout_weight="2"
-            android:paddingLeft="4dp">
+
 
             <EditText
                 android:id="@+id/edit_phone"
@@ -126,13 +122,13 @@
                 android:text="@string/dial" />
 
             <Button
+                android:id="@+id/saleButton"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                android:layout_alignParentBottom="true"
                 android:focusable="false"
                 android:text="Order" />
 
-        </RelativeLayout>
     </LinearLayout>
 
 </LinearLayout>
