--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -21,11 +21,11 @@
 
         <ImageView
             android:id="@+id/empty_shelter_image"
+            android:paddingTop="4dp"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_centerHorizontal="true"
             android:src="@drawable/inventory"
-
             />
 
         <TextView
@@ -35,6 +35,7 @@
             android:layout_below="@+id/empty_shelter_image"
             android:layout_centerHorizontal="true"
             android:fontFamily="sans-serif-smallcaps"
+            android:textStyle="bold"
             android:paddingTop="16dp"
             android:text="@string/empty_view_title_text"
             android:textAppearance="?android:textAppearanceMedium"/>
@@ -46,10 +47,10 @@
             android:layout_below="@+id/empty_title_text"
             android:layout_centerHorizontal="true"
             android:fontFamily="sans-serif"
+            android:textStyle="bold"
             android:paddingTop="8dp"
             android:text="@string/empty_view_subtitle_text"
             android:textColor="#A2AAB0"/>
-
 
     </RelativeLayout>
 
@@ -60,6 +61,7 @@
         android:layout_alignParentBottom="true"
         android:layout_alignParentRight="true"
         android:layout_gravity="bottom|end"
+        android:src="@drawable/check"
         android:layout_margin="@dimen/fab_margin" />
 
 </RelativeLayout>
