--- a/app/src/main/res/menu/menu_editor.xml
+++ b/app/src/main/res/menu/menu_editor.xml
@@ -6,7 +6,7 @@
 
     <item
         android:id="@+id/action_saved"
-        android:icon="@drawable/box"
+        android:icon="@drawable/check"
         android:title="@string/action_saved"
         app:showAsAction="always" />
 
