--- a/app/src/main/res/layout/list_item.xml
+++ b/app/src/main/res/layout/list_item.xml
@@ -11,7 +11,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:fontFamily="sans-serif-medium"
-        android:textAppearance="?android:textAppearanceMedium"
+        android:textAppearance="?android:textAppearanceLarge"
         android:textColor="#2B3D4D" />
 
     <TextView
@@ -26,7 +26,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:fontFamily="sans-serif"
-        android:textAppearance="?android:textAppearanceSmall"
+        android:textAppearance="?android:textAppearanceMedium"
         android:textColor="#AEB6BD" />
 
     <TextView
@@ -34,7 +34,9 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content" />
 
+
     <Button
+        android:text="sale"
         android:id="@+id/saleButton"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content" />
